修正 Goez 大小寫問題

--- a/etc/config.ini
+++ b/etc/config.ini
@@ -1,9 +1,9 @@
 [production]
 ; 應用程式初始化時的設定，一般來說是不用更改的
 ;bootstrap.userNamespace = "My_"
-;bootstrap.class = "GoEz_Bootstrap"
-;bootstrap.router = "GoEz_Router"
-;bootstrap.request = "GoEz_Request"
+;bootstrap.class = "Goez\Bootstrap"
+;bootstrap.router = "Goez\Router"
+;bootstrap.request = "Goez\Request"
 
 bootstrap.debug = on
 
