--- a/pub/.htaccess
+++ b/pub/.htaccess
@@ -1,5 +1,11 @@
-RewriteEngine off
 Options +FollowSymLinks
+RewriteEngine on
+RewriteCond %{REQUEST_FILENAME} -s [OR]
+RewriteCond %{REQUEST_FILENAME} -l
+RewriteRule ^.*$ - [NC,L]
+RewriteRule ^.*$ index.php [NC,L]
+php_flag magic_quotes_gpc off
+php_flag register_globals off
 
 <IfModule mod_deflate.c>
   # compress content with type html, text, and css
