--- a/etc/config.ini
+++ b/etc/config.ini
@@ -11,8 +11,8 @@ bootstrap.debug = on
 ; 這是給 Smarty 用的設定
 view.template_dir = APP_ROOT_PATH "/tpl"
 view.compile_dir = APP_ROOT_PATH "/tpl_c"
-view.left_delimiter = "<%"
-view.right_delimiter = "%>"
+view.left_delimiter = "{{"
+view.right_delimiter = "}}"
 ;view.plugins_dir[] = APP_LIB_PATH "/My/View/plugin"
 
 [development : production]
